name:          lens-edn
category:      Numeric
version:       0.1.0
license:       BSD3
cabal-version: >= 1.8
license-file:  LICENSE
author:        Roman Gonzalez
maintainer:    Roman Gonzalez <romanandreg@gmail.com>
stability:     provisional
homepage:      http://github.com/lens/lens-edn/
bug-reports:   http://github.com/lens/lens-edn/issues
copyright:
  Copyright (C) 2013 Roman Gonzalez, 2013 Edward Kmett, 2012 Paul Wilson
build-type:    Custom
tested-with:   GHC == 7.4.1, GHC == 7.6.1
synopsis:      Law-abiding lenses for edn
description:   Law-abiding lenses for edn

extra-source-files:
  .travis.yml
  .ghci
  .gitignore
  .vim.custom
  travis/cabal-apt-install
  travis/config
  AUTHORS.markdown
  README.markdown
  CHANGELOG.markdown

source-repository head
  type: git
  location: git://github.com/roman/lens-edn.git

-- You can disable the doctests test suite with -f-test-doctests
flag test-doctests
  default: True
  manual: True

flag lib-Werror
  default: False
  manual: True

library
  build-depends:
    base                 >= 4.3       && < 5,
    lens                 >= 3.9       && < 4,
    text                 >= 0.11.1.10 && < 0.12,
    containers           >= 0.5       && < 0.6,
    vector               >= 0.9       && < 0.11,
    utf8-string          >= 0.3.7     && < 0.4,
    attoparsec           >= 0.10      && < 0.11,
    bytestring           >= 0.9       && < 0.11,
    hedn                 >= 0.1       && < 0.2

  exposed-modules:
    Control.Lens.EDN

  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs: src

test-suite doctests
  type:           exitcode-stdio-1.0
  main-is:        doctests.hs
  ghc-options:    -Wall -threaded
  hs-source-dirs: tests

  if !flag(test-doctests)
    buildable: False
  else
    build-depends:
      base,
      directory      >= 1.0,
      doctest        >= 0.9.1,
      filepath,
      generic-deriving,
      semigroups     >= 0.9,
      simple-reflect >= 0.3.1

  if impl(ghc<7.6.1)
    ghc-options: -Werror
